2007-10-26  Lars Clausen  <lars@raeder.dk>

	* objects/UML/class_dialog.c: Patch for bug #490356: Use stock
	items for UML class dialog.  Patch from Felipe Reyes
	<felipereyes@gmail.com> 

2007-10-23  Hans Breuer  <hans@breuer.org>

	* app/select.c : 'textedit_mode' undefined;
	* app/textedit_tool.c : 'object_add_updates_list' undefined;
	* lib/libdia.def : unresolved external symbol _text_delete_key_handler

	* objects/Database/table_dialog.c : like UML/class_dialog.c move
	Styles (color, fonts) to their own page
	
2007-10-22  Lars Clausen  <lars@raeder.dk>

	* app/textedit_tool.c: Proper deselecting and tool resetting when
	clicking on other objects or outside of objects.

2007-10-21  Lars Clausen  <lars@raeder.dk>

	* app/textedit.h: Proper #ifndefs and includes.

	* app/select.c:
	* app/commands.c: Skip out or handle alternately a number of menu
	items when in text edit mode.  Undo of delete does not quite work yet.
	* lib/text.[ch]: Expose delete key handling to allow it to be used
	from delete menu handler.  

	* app/commands.c: 
	* app/menus.h (struct _UpdatableMenuItems): 
	* app/menus.c (menus_initialize_updatable_items): 
	* app/diagram.c (diagram_update_menu_sensitivity): Set menu
	sensitivities for text edit mode.  Keyboard shortcuts are still
	caught by the menu items when insensitive, unfortunately.

2007-10-20  Steffen Macke <sdteffen@sdteffen.de>

	* installer/win32/dia.nsi: Added sample files, new shapes
	
2007-10-20  Hans Breuer  <hans@breuer.org>

	* configure.in lib/libdia.def objects/Database 
	  objects/Database/compound.c objects/Database/database.c
	  objects/Database/database.h objects/Database/Makefile.am
	  objects/Database/pixmaps/compound.xpm
	  objects/Database/pixmaps/reference.xpm
	  objects/Database/pixmaps/table.xpm
	  objects/Database/reference.c objects/Database/table.c
	  objects/Database/table_dialog.c objects/Makefile.am
	  objects/makefile.msc po/POTFILES.in sheets/Database.sheet.in