@@ -405,9 +405,6 @@ dia_font_get_psfontname(const DiaFont *font)
     return NULL;
   }
 
-  if (!strcmp(fontname, "AvantGarde-Book")) {
-    return "AvantGarde-Gothic";
-  }
   if (!strcmp(fontname, "NewCenturySchoolbook-Roman")) {
     return "NewCenturySchlbk-Roman";
   }
@@ -757,8 +754,8 @@ dia_font_get_sizes(const char* string, DiaFont *font, real height,
  *
  * FIXME: DIA_FONT_FAMILY_ANY in the list below does mean noone knows better
  *
- * The PostScript names can be found on page 19 of 
- * http://partners.adobe.com/public/developer/en/ps/5011.FaxProtocol_Spec.pdf
+ * The PostScript names can be found on page 139 of 
+ * http://partners.adobe.com/public/developer/en/ps/PS3010and3011.Supplement.pdf
  * 
  * Note that these are not strictly the Adobe names, as a few were used
  * incorrectly and are kept for backwards compatibility.  The latin-1
